<resources>
    <string name="app_name">Tappze</string>
    <string name="welcome_text">Welcome back,\n Sign In you <b>account</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="purchase_items">Purchase Items</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="changepassword">ChangePassword</string>
    <string name="select_dob">Select DOB</string>
    <string name="ok">ok</string>
    <string name="instructions">Instructions</string>
    <string name="link">https://profile.tappze.ca/8y7XN2V0GpgBJqCcGrGAe9UuaI43</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Unidentified</item>
    </string-array>
</resources>